--- a/html_src/hkcosm_2_1.html
+++ b/html_src/hkcosm_2_1.html
@@ -79,12 +79,140 @@
 
 </header>
 
-<section class="visual">
-    <div class="visual-wrap">
-        <h2 class="visual-wrap-title">SINCE 1962</h2>
-        <div class="visual-wrap-text">아름다움의 시작, 그 속엔 언제나 한국화장품제조가 있습니다.</div>
+<section class="subVisual since">
+    <div class="subVisual-wrap">
+        <h2 class="subVisual-wrap-title">SINCE 1962</h2>
+        <div class="subVisual-wrap-text">아름다움의 시작, 그 속엔 언제나 한국화장품제조가 있습니다.</div>
     </div>
 </section>
+
+<section class="contents">
+    <div class="inner-box">
+        <div class="contents-title">한국의 아름다움,<br />한국화장품제조가 만들어 갑니다!</div>
+        <p class="contents-text">건강한 아름다움을 실현하고 생활을 아름답게 가꾼다는 고객과의 약속을 지키기 위해<br />
+            1962년부터 반세기가 흐른 지금까지 오직 한 길만을 걸어 온 한국화장품제조.<br />
+            이제 그 변치 않는 신념으로 OEM, ODM은 물론 비즈니스에 꼭 맞는 토탈 컨설팅으로 귀사의 브랜드에 든든한 경쟁력이 되겠습니다.
+        </p>
+    </div>
+</section>
+
+<section class="overview">
+    <div class="overview-img"></div>
+    <div class="overview-contents">
+        <div class="overview-wrap">
+            <h2 class="overview-contents-title">OVERVIEW</h2>
+            <ul class="overview-contents-list">
+                <li class="overview-contents-list-item">
+                    <div><img src="../images/hkcosm_2_1/overview_1.jpg" alt="설립연도"></div>
+                    <div class="overview-contents-list-text">
+                        <div class="overview-contents-list-text-title">설립연도</div>
+                        <div class="overview-contents-list-text-con">1962년 3월</div>
+                    </div>
+                </li>
+                <li class="overview-contents-list-item">
+                    <div><img src="../images/hkcosm_2_1/overview_2.jpg" alt="주요사업"></div>
+                    <div class="overview-contents-list-text">
+                        <div class="overview-contents-list-text-title">주요사업</div>
+                        <div class="overview-contents-list-text-con">화장품연구·개발·생산</div>
+                    </div>
+                </li>
+                <li class="overview-contents-list-item">
+                    <div><img src="../images/hkcosm_2_1/overview_3.jpg" alt="주요품목"></div>
+                    <div class="overview-contents-list-text">
+                        <div class="overview-contents-list-text-title">주요품목</div>
+                        <div class="overview-contents-list-text-con">기초·색조·기능성 화장품, 바디, 향수, 헤어제품 등</div>
+                    </div>
+                </li>
+                <li class="overview-contents-list-item">
+                    <div><img src="../images/hkcosm_2_1/overview_4.jpg" alt="주 소"></div>
+                    <div class="overview-contents-list-text">
+                        <div class="overview-contents-list-text-title">주 소</div>
+                        <div class="overview-contents-list-text-con">서울 종로구 청계천로 35 관정빌딩 (03188)</div>
+                    </div>
+                </li>
+                <li class="overview-contents-list-item">
+                    <div><img src="../images/hkcosm_2_1/overview_5.jpg" alt="연락처"></div>
+                    <div class="overview-contents-list-text">
+                        <div class="overview-contents-list-text-title">연락처</div>
+                        <div class="overview-contents-list-text-con">Tel. 02 - 724 - 3712 Fax. 02- 724 - 3715</div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+</section>
+
+<section class="prCenter">
+    <div class="container">
+        <h2 class="prCenter-title">PR CENTER</h2>
+        <div class="prCenter-video">
+            <iframe src="https://www.youtube.com/embed/E7an_ow-JTE?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <div class="prCenter-video-img">
+                <img src="../images/hkcosm_2_1/prcenter_video_img.jpg" alt="#">
+            </div>
+        </div>
+        <div class="prCenter-heading">반세기, 오직 화장품만을<br />사랑하고 연구해온 열정</div>
+        <p class="prCenter-text">한국화장품제조는 그 열정이 만들어낸 혁신적인 기술과 완벽한 제품, 고객사가 원하는 그 이상의 컨설팅과 플랜으로 여러분의 글로벌 성공신화를<br />창조하는 최상의 파트너가 되겠습니다!</p>
+    </div>
+</section>
+
+<section class="location">
+    <div class="container">
+        <h2 class="location-title">LOCATION</h2>
+        <ul class="location-list">
+            <li class="location-list-item">
+                <div class="location-list-map"><img src="../images/hkcosm_2_1/location_map1.jpg" alt="지도"></div>
+                <table summary="본사/기술개발연구원" class="location-list-table">
+                    <caption>본사/기술개발연구원</caption>
+                    <tbody>
+                        <tr>
+                            <th>주소</th>
+                            <td>서울시 종로구 청계천로 35 관정빌딩</td>
+                        </tr>
+                        <tr>
+                            <th>연락처</th>
+                            <td>Tel : 02-724-3712 / Fax : 02-724-3715</td>
+                        </tr>
+                        <tr>
+                            <th class="middle">자가용</th>
+                            <td>종로1가 사거리에서 청계천 방향으로 100m 직진 → 광교사거리에서 청계천로 청계광장(세종대로)방면으로 우회전 후 120m</td>
+                        </tr>
+                        <tr>
+                            <th class="middle">대중교통</th>
+                            <td>종각역 5번출구에서 청계천 방향으로 약 57m 이동(우정국로) → 광교사거리에서 오른쪽 길로 약 115m 이동</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </li>
+            <li class="location-list-item">
+                <div class="location-list-map"><img src="../images/hkcosm_2_1/location_map2.jpg" alt="지도"></div>
+                <table summary="음성공장" class="location-list-table">
+                    <caption>음성공장</caption>
+                    <tbody>
+                        <tr>
+                            <th>주소</th>
+                            <td>충청북도 음성군 삼성면 대성로 547번길 74 (용성리 76-1)</td>
+                        </tr>
+                        <tr>
+                            <th>연락처</th>
+                            <td>Tel : 043-879-7500 / Fax : 043-879-7501</td>
+                        </tr>
+                        <tr>
+                            <th class="middle">자가용</th>
+                            <td>중부고속도로 음성 톨게이트에서 음성방면으로 좌회전 → 300~400미터 지나 중부 고속도로 밑을 지나자마자 좌회전 → 약 5km 지나 좌측</td>
+                        </tr>
+                        <tr>
+                            <th class="middle">대중교통</th>
+                            <td>충북 음성군 대소 또는 삼성 터미널행 고속버스 승차 → 대소 또는 삼성 터미널 하차 후 택시 이용<span>(*서울에서 오실때는 동서울터미널을 이용하시면 편리합니다.)</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </li>
+        </ul>
+    </div>
+</section>
+
 <footer class="footer">
     <div class="inner-box">
         <div class="footer-con">
