--- a/index.html
+++ b/index.html
@@ -205,34 +205,32 @@
 
 <footer class="footer">
     <div class="inner-box">
-        <div class="footer-con">
-            <h2 class="footer-logo"><img src="images/footer_logo.png" alt="footer_logo"></h2>
-            <ul class="footer-contact">
-                <li class="footer-contact-list">Tel. +82-2-724-3712</li>
-                <li class="footer-contact-list">Fax. +82-2-724-3715</li>
-                <li class="footer-contact-list">E-mail. kunwooism@ihkcos.com</li>
-            </ul>
-            <div class="footer-text">
-                <a href="#" class="footer-text-privacy">개인정보취급방침</a>
-                <div class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</div>
+        <h2 class="footer-logo"><img src="images/footer_logo.png" alt="footer_logo"></h2>
+        <ul class="footer-contact">
+            <li class="footer-contact-list">Tel. +82-2-724-3712</li>
+            <li class="footer-contact-list">Fax. +82-2-724-3715</li>
+            <li class="footer-contact-list">E-mail. kunwooism@ihkcos.com</li>
+        </ul>
+        <div class="footer-text">
+            <a href="#" class="footer-text-privacy">개인정보취급방침</a>
+            <div class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</div>
+        </div>
+        <div class="footer-site">
+            <div class="footer-site-map">
+                <a href="#" class="footer-site-map-link">SITEMAP</a>
             </div>
-            <div class="footer-site">
-                <div class="footer-site-map">
-                    <a href="#" class="footer-site-map-link">SITEMAP</a>
-                </div>
-                <select name="famaily site" class="footer-site-family">
-                    <option value="FAMILY SITE">FAMILY SITE</option>
-                    <option value="FAMILY SITE">한국화장품</option>
-                    <option value="FAMILY SITE">산심</option>
-                    <option value="FAMILY SITE">효움</option>
-                    <option value="FAMILY SITE">칼리</option>
-                    <option value="FAMILY SITE">시크릿네이처</option>
-                    <option value="FAMILY SITE">글로벌 에코 더샘</option>
-                </select>
-            </div>
-            <div class="footer-contactUs">
-                <a href="#" class="footer-contactUs-link">CONTACT US
-                    <span class="footer-contactUs-link-arrow"></span>
+            <select name="famaily site" class="footer-site-family">
+                <option value="FAMILY SITE">FAMILY SITE</option>
+                <option value="FAMILY SITE">한국화장품</option>
+                <option value="FAMILY SITE">산심</option>
+                <option value="FAMILY SITE">효움</option>
+                <option value="FAMILY SITE">칼리</option>
+                <option value="FAMILY SITE">시크릿네이처</option>
+                <option value="FAMILY SITE">글로벌 에코 더샘</option>
+            </select>
+            <div class="footer-site-contactUs">
+                <a href="#" class="footer-site-contactUs-link">CONTACT US
+                    <span class="footer-site-contactUs-link-arrow"></span>
                 </a>
             </div>
         </div>
