--- a/html_src/hkcosm_2_1.html
+++ b/html_src/hkcosm_2_1.html
@@ -1,83 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
-    <link rel="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
-</head>
-<body>
-
-<header class="header">
-    <div class="header-inner">
-        <div class="header-top">
-            <h1 class="logo"><a href="#" class="logo-link"><img src="../images/header_logo.png" alt="logo"></a></h1>
-            <div class="lang">
-                <ul class="lang-list">
-                    <li class="lang-list-item"><a href="#" class="lang-list-link">KR</a></li>
-                    <li class="lang-list-item"><a href="#" class="lang-list-link">EN</a></li>
-                    <li class="lang-list-item"><a href="#" class="lang-list-link">CN</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="header-bottom">
-            <nav class="gnb">
-                <ul class="gnb-depth1">
-                    <li class="gnb-depth1-item">
-                        <a href="#" class="gnb-depth1-link">THE HKCM</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사소개</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">CEO메시지</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">연혁</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">News</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item">
-                        <a href="#" class="gnb-depth1-link">CONSULTING</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Beauty Full Solution</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">주요개발품목</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Portfolio</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Webzine</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item">
-                        <a href="#" class="gnb-depth1-link">R&amp;I</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기술개발연구원</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">수상내역</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">품질관리</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">특허현황</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">독점개발 기능성원료</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">독자개발신제형</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item"><a href="#" class="gnb-depth1-link">MANUFACTURING</a></li>
-                    <li class="gnb-depth1-item">
-                        <a href="#" class="gnb-depth1-link">INVESTORS</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사개요</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기업지배구조</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">주식정보</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">재무정보</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">공시.공고</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기타</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item">
-                        <a href="#" class="gnb-depth1-link">CONTACT</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Q&A</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">FAQ</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-
-</header>
+<!--=include _include/_header.html -->
 
 <section class="subVisual since">
     <div class="subVisual-wrap">
@@ -213,41 +134,4 @@
     </div>
 </section>
 
-<footer class="footer">
-    <div class="inner-box">
-        <div class="footer-con">
-            <h2 class="footer-logo"><img src="../images/footer_logo.png" alt="footer_logo"></h2>
-            <ul class="footer-contact">
-                <li class="footer-contact-list">Tel. +82-2-724-3712</li>
-                <li class="footer-contact-list">Fax. +82-2-724-3715</li>
-                <li class="footer-contact-list">E-mail. kunwooism@ihkcos.com</li>
-            </ul>
-            <div class="footer-text">
-                <a href="#" class="footer-text-privacy">개인정보취급방침</a>
-                <div class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</div>
-            </div>
-            <div class="footer-site">
-                <div class="footer-site-map">
-                    <a href="#" class="footer-site-map-link">SITEMAP</a>
-                </div>
-                <select name="famaily site" class="footer-site-family">
-                    <option value="FAMILY SITE">FAMILY SITE</option>
-                    <option value="FAMILY SITE">한국화장품</option>
-                    <option value="FAMILY SITE">산심</option>
-                    <option value="FAMILY SITE">효움</option>
-                    <option value="FAMILY SITE">칼리</option>
-                    <option value="FAMILY SITE">시크릿네이처</option>
-                    <option value="FAMILY SITE">글로벌 에코 더샘</option>
-                </select>
-            </div>
-            <div class="footer-contactUs">
-                <a href="#" class="footer-contactUs-link">CONTACT US
-                    <span class="footer-contactUs-link-arrow"></span>
-                </a>
-            </div>
-        </div>
-    </div>
-</footer>
-
-</body>
-</html>
+<!--=include _include/_footer.html -->
