--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div class="header-inner">
         <div class="header-top">
-            <h1 class="logo"><a href="hkcosm_1.html" class="logo-link"><img src="images/header_logo.png" alt="logo"></a></h1>
+            <h1 class="logo"><a href="html/hkcosm_1.html" class="logo-link"><img src="images/header_logo.png" alt="logo"></a></h1>
             <div class="lang">
                 <ul class="lang-list">
                     <li class="lang-list-item"><a href="#" class="lang-list-link">KR</a></li>
@@ -30,7 +30,7 @@
             <nav class="gnb">
                 <ul class="gnb-depth1">
                     <li class="gnb-depth1-item">
-                        <a href="hkcosm_2_1.html" class="gnb-depth1-link">THE HKCM</a>
+                        <a href="html/hkcosm_2_1.html" class="gnb-depth1-link">THE HKCM</a>
                         <ul class="gnb-depth2">
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사소개</a></li>
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">CEO메시지</a></li>
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li class="gnb-depth1-item">
-                        <a href="hkcosm_3_1.html" class="gnb-depth1-link">CONSULTING</a>
+                        <a href="html/hkcosm_3_1.html" class="gnb-depth1-link">CONSULTING</a>
                         <ul class="gnb-depth2">
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Beauty Full Solution</a></li>
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">주요개발품목</a></li>
@@ -48,7 +48,7 @@
                         </ul>
                     </li>
                     <li class="gnb-depth1-item">
-                        <a href="hkcosm_4_1.html" class="gnb-depth1-link">R&amp;I</a>
+                        <a href="html/hkcosm_4_1.html" class="gnb-depth1-link">R&amp;I</a>
                         <ul class="gnb-depth2">
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기술개발연구원</a></li>
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">수상내역</a></li>
@@ -58,9 +58,9 @@
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">독자개발신제형</a></li>
                         </ul>
                     </li>
-                    <li class="gnb-depth1-item"><a href="hkcosm_5_1.html" class="gnb-depth1-link">MANUFACTURING</a></li>
+                    <li class="gnb-depth1-item"><a href="html/hkcosm_5_1.html" class="gnb-depth1-link">MANUFACTURING</a></li>
                     <li class="gnb-depth1-item">
-                        <a href="hkcosm_6_1.html" class="gnb-depth1-link">INVESTORS</a>
+                        <a href="html/hkcosm_6_1.html" class="gnb-depth1-link">INVESTORS</a>
                         <ul class="gnb-depth2">
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사개요</a></li>
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기업지배구조</a></li>
@@ -71,7 +71,7 @@
                         </ul>
                     </li>
                     <li class="gnb-depth1-item">
-                        <a href="hkcosm_7_1.html" class="gnb-depth1-link">CONTACT</a>
+                        <a href="html/hkcosm_7_1.html" class="gnb-depth1-link">CONTACT</a>
                         <ul class="gnb-depth2">
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Q&A</a></li>
                             <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">FAQ</a></li>
