--- a/html/hkcosm_5_1.html
+++ b/html/hkcosm_5_1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
@@ -15,73 +16,70 @@
 <body>
 
 <header class="header">
-    <div class="header-inner">
-        <div class="header-top">
-            <h1 class="logo"><a href="hkcosm_1.html" class="logo-link"><img src="../images/header_logo.png" alt="logo"></a></h1>
-            <div class="lang">
-                <ul class="lang-list">
-                    <li class="lang-list-item"><a href="#" class="lang-list-link">KR</a></li>
-                    <li class="lang-list-item"><a href="#" class="lang-list-link">EN</a></li>
-                    <li class="lang-list-item"><a href="#" class="lang-list-link">CN</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="header-bottom">
-            <nav class="gnb">
-                <ul class="gnb-depth1">
-                    <li class="gnb-depth1-item">
-                        <a href="hkcosm_2_1.html" class="gnb-depth1-link">THE HKCM</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사소개</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">CEO메시지</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">연혁</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">News</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item">
-                        <a href="hkcosm_3_1.html" class="gnb-depth1-link">CONSULTING</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Beauty Full Solution</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">주요개발품목</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Portfolio</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Webzine</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item">
-                        <a href="hkcosm_4_1.html" class="gnb-depth1-link">R&amp;I</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기술개발연구원</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">수상내역</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">품질관리</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">특허현황</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">독점개발 기능성원료</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">독자개발신제형</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item"><a href="hkcosm_5_1.html" class="gnb-depth1-link">MANUFACTURING</a></li>
-                    <li class="gnb-depth1-item">
-                        <a href="hkcosm_6_1.html" class="gnb-depth1-link">INVESTORS</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사개요</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기업지배구조</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">주식정보</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">재무정보</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">공시.공고</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기타</a></li>
-                        </ul>
-                    </li>
-                    <li class="gnb-depth1-item">
-                        <a href="hkcosm_7_1.html" class="gnb-depth1-link">CONTACT</a>
-                        <ul class="gnb-depth2">
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Q&A</a></li>
-                            <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">FAQ</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
+    <div class="header-top">
+        <h1 class="logo"><a href="hkcosm_1.html" class="logo-link"><img src="../images/header_logo.png" alt="logo"></a></h1>
+        <div class="lang">
+            <ul class="lang-list">
+                <li class="lang-list-item"><a href="#" class="lang-list-link">KR</a></li>
+                <li class="lang-list-item"><a href="#" class="lang-list-link">EN</a></li>
+                <li class="lang-list-item"><a href="#" class="lang-list-link">CN</a></li>
+            </ul>
         </div>
     </div>
-
+    <div class="header-bottom">
+        <nav class="gnb">
+            <ul class="gnb-depth1">
+                <li class="gnb-depth1-item">
+                    <a href="hkcosm_2_1.html" class="gnb-depth1-link">THE HKCM</a>
+                    <ul class="gnb-depth2">
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사소개</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">CEO메시지</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">연혁</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">News</a></li>
+                    </ul>
+                </li>
+                <li class="gnb-depth1-item">
+                    <a href="hkcosm_3_1.html" class="gnb-depth1-link">CONSULTING</a>
+                    <ul class="gnb-depth2">
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Beauty Full Solution</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">주요개발품목</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Portfolio</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Webzine</a></li>
+                    </ul>
+                </li>
+                <li class="gnb-depth1-item">
+                    <a href="hkcosm_4_1.html" class="gnb-depth1-link">R&amp;I</a>
+                    <ul class="gnb-depth2">
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기술개발연구원</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">수상내역</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">품질관리</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">특허현황</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">독점개발 기능성원료</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">독자개발신제형</a></li>
+                    </ul>
+                </li>
+                <li class="gnb-depth1-item"><a href="hkcosm_5_1.html" class="gnb-depth1-link">MANUFACTURING</a></li>
+                <li class="gnb-depth1-item">
+                    <a href="hkcosm_6_1.html" class="gnb-depth1-link">INVESTORS</a>
+                    <ul class="gnb-depth2">
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">회사개요</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기업지배구조</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">주식정보</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">재무정보</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">공시.공고</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">기타</a></li>
+                    </ul>
+                </li>
+                <li class="gnb-depth1-item">
+                    <a href="hkcosm_7_1.html" class="gnb-depth1-link">CONTACT</a>
+                    <ul class="gnb-depth2">
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">Q&A</a></li>
+                        <li class="gnb-depth2-item"><a href="#" class="gnb-depth2-link">FAQ</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
 <section class="subVisual facility">
@@ -198,7 +196,7 @@
 
 <footer class="footer">
 
-    <div class="inner-box">
+    <div class="container">
 
         <h2 class="footer-logo"><img src="../images/footer_logo.png" alt="footer_logo"></h2>
 
