--- a/html_src/hkcosm_1.html
+++ b/html_src/hkcosm_1.html
@@ -6,7 +6,7 @@
         <li class="slider-item">2</li>
     </ul>
     <div class="mainVisual-text">
-        <h2 class="mainVisual-text-heading">BEAUTY FULL SOLUTION</h2>
+        <h2 class="mainVisual-text-heading">BEAUTY FULL<br class="br"> SOLUTION</h2>
         <div class="mainVisual-text-con">늘 앞선 생각과 발 빠른 창조로 내일의 이슈를 만들어 갑니다.</div>
         <div class="moreBtn">
             <a href="#" class="moreBtn-link">Learn More</a>
